# ee374-wi2023

./: .gitignore  chapter02.ipynb  chapter04.ipynb  chapter05.ipynb  chapter06.ipynb
PSET1/: sketch-PSET_1.ipynb
ece598pv-sp2022/: lecture02.ipynb
ece598pv-sp2022/warmup1/: Cargo.toml
ee374-wi2023/: Cargo.toml  chapter01.ipynb  chapter02.ipynb  chapter03.ipynb  chapter04.ipynb  chapter05.ipynb  chapter06.ipynb  chapter09.ipynb  chapter10.ipynb  lecture-notes.ipynb
ee374-wi2023/PSET1/: sketch-PSET_1.ipynb
ee374-wi2023/marabu/: Cargo.toml  README.md
ee374-wi2023/marabu/examples/: quick_dev.rs
ee374-wi2023/marabu/src/: main.rs
