[package]
name = "marabu"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# serde_with = "3"
# Axum
axum = { version = "0.7", features = ["macros"] }
# tower-http = { version = "0.5", features = ["fs"] }
# tower-cookies = "0.10"
# Others
httpc-test = "0.1.1"
anyhow = "1"
